--- a/final/report/report.tex
+++ b/final/report/report.tex
@@ -22,10 +22,10 @@
 	\newpage
 	\hspace{0pt}
 	\vfill
-%	\import{\sectiondir}{intro.tex}
-%	\vfill
-%	\hspace{0pt}
-%	\newpage
-%	\newpage	
-%	\import{\sectiondir}{bib.tex}
+	\import{\sectiondir}{intro.tex}
+	\vfill
+	\hspace{0pt}
+	\newpage
+	\newpage	
+	\import{\sectiondir}{bib.tex}
 \end{document}
