--- a/final/report/sections/title.tex
+++ b/final/report/sections/title.tex
@@ -29,8 +29,8 @@
 \emph{Authors:}\\[0.7cm]
 
 \begin{tabular}{rl}
-    Alejandro \textsc{Rodriguez Salamanca}: &\texttt{r0650814@student.kuleuven.be}\\
-    Fernando \textsc{Collado Egea}: &\texttt{???@student.kuleuven.be}\\
+    Alejandro \textsc{Rodriguez Salamanca}: &\texttt{r0650814}\\
+    Fernando \textsc{Collado Egea}: &\texttt{???}\\
 
 \end{tabular}\\[2cm]
 
