--- a/final/report/report.tex
+++ b/final/report/report.tex
@@ -25,6 +25,7 @@
 	\import{\sectiondir}{intro.tex}
 	\vfill
 	\hspace{0pt}
+        \import{\sectiondir}{preprocess.tex}
 	\newpage
 	\newpage	
 	\import{\sectiondir}{bib.tex}
