--- a/final/report/sections/preprocess.tex
+++ b/final/report/sections/preprocess.tex
@@ -2,7 +2,7 @@
 
 Radiographs are images inherently noisy. In order to locate
 the teeth precisely, the original radiographs should be
-converted in images as noiseless as posible, but sharpen
+converted to images as noiseless as posible, but sharpen
 enough to locate the edges of the teeth. For this purpose
 the following algorithms and transfomations are used:
 
