--- a/final/report/sections/preprocess.tex
+++ b/final/report/sections/preprocess.tex
@@ -2,7 +2,7 @@
 
 Radiographs are images inherently noisy. In order to locate
 the teeth precisely, the original radiographs should be
-converted to images as noiseless as posible, but sharpen
+converted to images as noiseless as posible, but sharp
 enough to locate the edges of the teeth. For this purpose
 the following algorithms and transfomations are used:
 
@@ -36,4 +36,5 @@ the following algorithms and transfomations are used:
   an image highlights regions of rapid intensity change.
 \end{enumerate}
 
-%image showing the differnet phases of enhancenment
+% image showing the differnet phases of enhancenment
+  \includegraphics[width=\linewidth]{img/enhancenment}
