--- a/final/report/report.tex
+++ b/final/report/report.tex
@@ -12,6 +12,8 @@
 \usepackage{wrapfig}
 \usepackage{listings}
 \usepackage[english]{babel}
+\usepackage{algorithm2e}
+
 %%% Configure a directory location for sections
 \newcommand*{\sectiondir}{sections/}
 \usepackage{import}
@@ -25,8 +27,13 @@
 	\import{\sectiondir}{intro.tex}
 	\vfill
 	\hspace{0pt}
+        \import{\sectiondir}{active_shape_models.tex}
+        \import{\sectiondir}{grey_level_models.tex}
         \import{\sectiondir}{preprocess.tex}
-	\newpage
+        \import{\sectiondir}{init.tex}
+        \import{\sectiondir}{fit.tex}
+        \import{\sectiondir}{results.tex}
+        \import{\sectiondir}{improvements.tex}
 	\newpage	
 	\import{\sectiondir}{bib.tex}
 \end{document}
