--- a/final/report/sections/active_shape_models.tex
+++ b/final/report/sections/active_shape_models.tex
@@ -6,7 +6,7 @@ of the object in a new image.
 
 \subsection{Load data}
 For this assignment we are provided by a set of landmarks, each one
-containing a list of points that corresponds with the shape of a tooth.
+containing a list of points corresponding with the shape of a tooth.
 Those landmarks should be used to build an Active shape model.
 The first step is to load the landmarks. They are stored in list form,
 following the format ${[X_1, Y_1, \ldots, X_n, Y_n]}^T$. To increase
