--- a/final/report/sections/init.tex
+++ b/final/report/sections/init.tex
@@ -1,5 +1,18 @@
 \section{Initialization}
 
 \subsection{Manual}
+As suggested in the project statement, manual initialization
+was implemented first to evaluate the fitting algorithm and
+the automatic initialization separately.
+
+The implementation is pretty straightforward. Using different
+OpenCV routines, the mean shape can be dragged to its initial
+position, and one it has been located, the fitting algorithm starts.
+
+Nevertheless, this procedure presents a problem. The rotation of the
+shape can't be changed, which causes that the initial estimation is not
+as accurate as it could be.
 
 \subsection{Automatic}
+
+% TODO
