--- a/final/report/sections/preprocess.tex
+++ b/final/report/sections/preprocess.tex
@@ -37,4 +37,8 @@ the following algorithms and transfomations are used:
 \end{enumerate}
 
 % image showing the differnet phases of enhancenment
+\begin{figure}
+  \centering
   \includegraphics[width=\linewidth]{img/enhancenment}
+  \caption{Image after applying the alogorithms}
+  \end{figure}
