--- a/final/report/sections/grey_level_models.tex
+++ b/final/report/sections/grey_level_models.tex
@@ -11,4 +11,8 @@ $np$ pixels, centered around the landmark point.
 To reduce the effect of global intensity changes, we do not use
 the actual vector $g$ but use the normalized derivative instead.
 
-\includegraphics[width=\linewidth]{img/grey-level}
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{img/grey-level}
+  \caption{Grey Level Model}
+\end{figure}
