--- a/final/report/sections/title.tex
+++ b/final/report/sections/title.tex
@@ -30,7 +30,7 @@
 
 \begin{tabular}{rl}
     Alejandro \textsc{Rodriguez Salamanca}: &\texttt{r0650814}\\
-    Fernando \textsc{Collado Egea}: &\texttt{???}\\
+    Fernando \textsc{Collado Egea}: &\texttt{r0650586}\\
 
 \end{tabular}\\[2cm]
 
