--- a/final/report/report.tex
+++ b/final/report/report.tex
@@ -27,6 +27,7 @@
 	\import{\sectiondir}{intro.tex}
 	\vfill
 	\hspace{0pt}
+        \newpage
         \import{\sectiondir}{active_shape_models.tex}
         \import{\sectiondir}{grey_level_models.tex}
         \import{\sectiondir}{preprocess.tex}
