--- a/final/report/sections/grey_level_models.tex
+++ b/final/report/sections/grey_level_models.tex
@@ -21,7 +21,7 @@ $$ {dg_{ij} =  [g_{ij1} - g_{ij0}, g_{ij2} - g_{ij1}, \ldots, g_{ij(2k+1)}  - g_
 
 Finally, the differential form is normalized.
 
-\begin{figure}
+\begin{figure}[h]
   \centering
   \includegraphics[width=\linewidth]{img/grey-level}
   \caption{Grey Level Model}
