--- a/final/report/sections/preprocess.tex
+++ b/final/report/sections/preprocess.tex
@@ -10,7 +10,7 @@ the following algorithms and transfomations are used:
   \item \textbf{Non-Local Means Denoising} - This algorithm
   performs denoising replacing the color of a pixel with
   an average of the colors of similar pixels. With the correct
-  parameters, the result with have less noise than the original
+  parameters, the result will have less noise than the original
   image, maintainig the image sharp.
 \item \textbf{Top hat} - Is the difference between an input
   image and its opening. It extracts small elements and details
@@ -37,7 +37,7 @@ the following algorithms and transfomations are used:
 \end{enumerate}
 
 % image showing the differnet phases of enhancenment
-\begin{figure}
+\begin{figure}[h]
   \centering
   \includegraphics[width=\linewidth]{img/enhancenment}
   \caption{Image after applying the alogorithms}
