--- a/final/report/sections/results.tex
+++ b/final/report/sections/results.tex
@@ -1,1 +1,14 @@
 \section{Results}
+
+
+\begin{figure}[!htb] \centering
+  \begin{minipage}{0.49\textwidth}
+  \frame{\includegraphics[width=\linewidth]{img/manual}}
+  \caption{Result (manual initialization)}
+\end{minipage}
+\begin{minipage}{0.49\textwidth} \centering
+  \frame{\includegraphics[width=\linewidth]{img/manual_truth}}
+  \caption{Ground truth}
+ \end{minipage}
+\end{figure}
+
