--- a/final/report/sections/results.tex
+++ b/final/report/sections/results.tex
@@ -1,5 +1,27 @@
 \section{Results}
 
+For the evaluation of the segmentation, as proposed in the
+project statement, leave-one-out has been used. In this technique,
+the data of the tooth we are trying to locate and segmentate is left
+out of the trainign set, and it is used to test the obtained result.
+
+But we need to know how good we have segmentated a given tooth with
+respect to the ground truth. For this, the Jaccard index has been used.
+The Jaccard Index or Jaccard coefficient is a statistic used for
+comparing the similarity and diversity of
+sample sets. The Jaccard coefficient measures similarity between
+finite sample sets, and is defined as the size of the intersection
+divided by the size of the union of the sample sets.
+
+$$ J(A,B) =  \frac{|A \cap B|}{|A \cup B|} = \frac{|A \cap B|}{|A| + |B| + |A \cap B|} $$
+
+The result will be a number between 0 (no overlap) and
+1 (perfect segmentation).
+
+ \begin{figure} \centering
+  \frame{\includegraphics[width=0.6\linewidth]{img/iou}}
+  \caption{Index of Union}
+\end{figure}
 
 \begin{figure}[!htb] \centering
   \begin{minipage}{0.49\textwidth}
