Auto result images

--- a/final/report/sections/results.tex
+++ b/final/report/sections/results.tex
@@ -49,5 +49,16 @@ images the contour of the tooth is much more defined in the crown.
 
 \subsection{Automatic initialization}
 % TODO
+ \begin{figure} \centering
+  \frame{\includegraphics[width=0.6\linewidth]{img/acc_auto}}
+  \caption{Accuracy of the segmentation}
+\end{figure}
+
+
+ \begin{figure} \centering
+  \frame{\includegraphics[width=0.6\linewidth]{img/auto}}
+  \caption{Result (automatic initialization)}
+\end{figure}
+
 
 
