report spell-check

--- a/final/report/sections/active_shape_models.tex
+++ b/final/report/sections/active_shape_models.tex
@@ -5,7 +5,7 @@ of objects which iteratively deform to fit to an example
 of the object in a new image.
 
 \subsection{Load data}
-For this assignment we are provided by a set of landmarks, each one
+For this assignment we are provided with a set of landmarks, each one
 containing a list of points corresponding with the shape of a tooth.
 Those landmarks should be used to build an Active shape model.
 The first step is to load the landmarks. They are stored in list form,
