--- a/final/report/sections/intro.tex
+++ b/final/report/sections/intro.tex
@@ -1,9 +1,9 @@
 \section{Introduction}
-Identificating objects in images manually is a tedious process and
+Detecting objects in images manually is a tedious process and
 error prone if performed by a human. Images are inherently noisy, and
 sometimes indentifying the object we are looking for is not an easy duty.
 An automatic method to indentify and segmentate objects in images
 is then needed.
 
-In this projects, a model-based segmentation approach has been
+In this project, a model-based segmentation approach has been
 implemented based on Active Shape Models, developed by Cootes et al.
