--- a/final/report/sections/results.tex
+++ b/final/report/sections/results.tex
@@ -7,7 +7,7 @@ out of the trainign set, and it is used to test the obtained result.
 
 But we need to know how good we have segmentated a given tooth with
 respect to the ground truth. For this, the Jaccard index has been used.
-The Jaccard Index or Jaccard coefficient is a statistic used for
+The Jaccard Index or Jaccard coefficient is a metric used for
 comparing the similarity and diversity of
 sample sets. The Jaccard coefficient measures similarity between
 finite sample sets, and is defined as the size of the intersection
