--- a/final/report/sections/results.tex
+++ b/final/report/sections/results.tex
@@ -60,8 +60,8 @@ images the contour of the tooth is much more defined in the crown.
 \end{figure}
 
 The results are not as good as the manual ones, and, the position of the lower
-incisives could be improved. It can be seen that the main problem are with
-incisives 5 and 8 (4 and 7 in the accuracy graph). These results could be
+incisors could be improved. It can be seen that the main problem are with
+incisors 5 and 8 (4 and 7 in the accuracy graph). These results could be
 improved, and some ideas as for how, are given in the future improvements section
 
 
