teeth auto-detection improved

--- a/final/report/sections/fit.tex
+++ b/final/report/sections/fit.tex
@@ -33,7 +33,7 @@ Starting with the initial estimate computed previously as $X_i$
   \textit{An Introduction to Active Shape Models}.
 \item \textbf{Apply constraints} --- To ensure that the generated
   shapes are valid, some constraints must be applied to the different
-  paramenters. The shape parameter \texttt{b} is allowed to vary at most
+  parameters. The shape parameter \texttt{b} is allowed to vary at most
   three times the standard deviation. Scaling is also limited to the range
   \texttt{0.8 - 1.2}, and rotation is allowed in the range $\pm\pi/6$
   with respect to the mean shape.
