minor report changes

--- a/final/report/sections/grey_level_models.tex
+++ b/final/report/sections/grey_level_models.tex
@@ -7,7 +7,7 @@ modelled by a mean and a number of modes of allowed variation.
 
 For every landmark point $j$ in the image $i$ of the
 training set, we extract a gray level profile $g_{ij}$ , of length
-$np$ pixels, centered around the landmark point.
+$k$ pixels, centered around the landmark point.
 To reduce the effect of global intensity changes, we do not use
 the actual vector $g$ but use the normalized derivative instead.
 
